--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@expo/next-adapter": "^4.0.6",
     "@expo/vector-icons": "^13.0.0",
     "@native-base/icons": "^0.0.11",
+    "babel-eslint": "^10.1.0",
     "expo-font": "^10.0.3",
     "native-base": "^3.4.0",
     "next": "12.0.4",
@@ -26,8 +27,14 @@
   "devDependencies": {
     "@native-base/next-adapter": "^1.1.9",
     "babel-preset-expo": "^8.5.1",
-    "eslint": "7",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "12.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-transpile-modules": "^9.0.0"
