--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "babel-eslint": "^10.1.0",
+    "dom-helpers": "^3.4.0",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "3.2.1",
