--- a/web/package.json
+++ b/web/package.json
@@ -8,13 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@expo/next-adapter": "^4.0.5",
+    "@expo/next-adapter": "^4.0.6",
     "@expo/vector-icons": "^13.0.0",
     "@native-base/icons": "^0.0.11",
+    "@react-aria/button": "^3.5.1",
+    "@react-aria/checkbox": "^3.4.1",
+    "@react-aria/combobox": "^3.3.1",
+    "@react-aria/radio": "^3.2.1",
     "babel-eslint": "^10.1.0",
     "expo-font": "^10.0.3",
     "expo-modules-core": "^0.9.2",
-    "native-base": "^3.4.0",
+    "native-base": "^3.4.7",
     "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
